Resolve issue of Order buttons not showing
Was able to resolve the issue of the Order button showing up on one item
but not the other items on the menu page. Ended up giving each item
it's own unique button with unique naming convention after failing to
put together a forEach method that would add the same type of button to
all the menu items.

--- a/src/styles.css
+++ b/src/styles.css
@@ -248,12 +248,12 @@ div[class*="content"] {
   align-content: center;
   gap: 1rem;
 
-  & div[class^="item-name"],
-  div[class^="price"] {
+  & div[class^="name-"],
+  div[class^="price-"] {
     font-weight: 800;
   }
 
-  & .order-btn {
+  & button {
     background: #3882F6;
     border: 1px solid #3882F6;
     border-radius: 8px;
